--- a/template/uetke/templates/static_pages/courses.html
+++ b/template/uetke/templates/static_pages/courses.html
@@ -30,12 +30,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead text-justify">The aim of the courses is to show that anybody can build software for the lab. Our intensive 3-day courses cover the basics of working with Python to distributing packages with built-in documentation.&nbsp; </p>
-          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world cases, with real devices and measurements. The courses are aimed at small groups of 5 people in order
-            to deliver personalized content to every attendant.&nbsp;</p>
-          <p class="text-justify">Do you want to have a personalized course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
+          <p class="lead text-justify">The aim of the courses is to show that anybody can build software for the lab. Our intensive 3-day courses cover from the basics of working with Python to distributing packages with built-in documentation.&nbsp; </p>
+          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world examples, with real devices and measurements.</p>
+          <p class="text-justify"><b>Discounts for Groups:</b> If you are group of 5 or more people we can provide the course at your location. Are you part of an academic organization (research institutes, universities, etc.), then we offer discounts for the courses. If you want to learn more, drop us a line: courses@uetke.com</p>
         </div>
         <div class="col-lg-6 d-none d-md-block col-md-4" style="background-image: url('{{ SITEURL }}/theme/img/apple-desk-laptop-working_2.jpg');background-size:cover;background-repeat:no-repeat;background-position:right center;"></div>
+      </div>
+    </div>
+  </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-6 d-none d-md-block col-md-4" style="background-image: url('{{ SITEURL }}/theme/img/europe_map.jpg');background-size:cover;background-repeat:no-repeat;background-position:right center;"></div>
+
+        <div class="col-md-8 col-lg-6">
+          <h3>Anywhere in Europe</h3>
+          <p class="text-justify">Python for The Lab courses can be organized anywhere in Europe. If you are a group of at least 5 people who want to follow any of the 3-day workshops, contact us. </p>
+          <p class="text-justify">We offer special packages for institutions willing to organize workshops for larger groups or that want to combine more than one of the trainings. Contact us at <b>courses@uetke.com</b> to receive further information.</p>
+        </div>
       </div>
     </div>
   </div>
@@ -58,6 +70,12 @@
               <h6 class="">Important: You should bring your own laptop to the course.</h6>
             </div>
           </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <h5>We offer different courses</h5>
+                    <p>We have developed three different courses to cover different needs. <a href="/courses/pythonlab/">Python For The Lab</a> is the basic course for people who already know some programming and want to go one step forward in controlling their setups. <a href="/courses/advanced/">Advanced Python for the Lab</a> is aimed at all those who already control their experiments and want to improve specific skills, such as working with high frame rate cameras, special DAQ cards, etc. <a href="/courses/gitscience/">Git for Scientists</a> covers all the steps to start building successful open science projects: from documenting projects to releasing to the public.</p>
+                </div>
+            </div>
         </div>
       </div>
     </div>
