Modification to article template

--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -96,40 +96,40 @@ background-attachment: fixed;">
               </div>
           </div>
       </div>
-      <div class="comments my-3">
-        <h3 id="comments">COMMENTS</h3>
-        <div id="current-comments"></div>
-      <div class="comment">
-        <form method="post" action="https://api.staticman.net/v2/entry/uetke/website_comments/master/comments" id="comment-form">
-          <input name="fields[url]" type="hidden" value="{{ article.url }}" />
-            <div class="form-group required row">
-                <label for="name" class="col-sm-2 col-form-label">Name:</label>
-              <div class="col-sm-10">
-                <input class="form-control" required="required" name="fields[name]" type="text" id="name">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="email" class="col-sm-2 col-form-label">E-mail:</label>
-              <div class="col-sm-10">
-                <input name="fields[email]" required="required" class="form-control" id="email" type="email" >
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label" for="website">Website:</label>
-              <div class="col-sm-10">
-               <input name="fields[website]" class="form-control" id="website" type="text">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label" for="message">Message:</label>
-              <div class="col-sm-10">
-                <textarea name="fields[message]" required="required" class="form-control" id="message"></textarea>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-secondary mb-2" id="submit">Submit</button>
-        </form>
-      </div>
-    </div>
+{#      <div class="comments my-3">#}
+{#        <h3 id="comments">COMMENTS</h3>#}
+{#        <div id="current-comments"></div>#}
+{#      <div class="comment">#}
+{#        <form method="post" action="https://api.staticman.net/v2/entry/uetke/website_comments/master/comments" id="comment-form">#}
+{#          <input name="fields[url]" type="hidden" value="{{ article.url }}" />#}
+{#            <div class="form-group required row">#}
+{#                <label for="name" class="col-sm-2 col-form-label">Name:</label>#}
+{#              <div class="col-sm-10">#}
+{#                <input class="form-control" required="required" name="fields[name]" type="text" id="name">#}
+{#              </div>#}
+{#            </div>#}
+{#            <div class="form-group row">#}
+{#              <label for="email" class="col-sm-2 col-form-label">E-mail:</label>#}
+{#              <div class="col-sm-10">#}
+{#                <input name="fields[email]" required="required" class="form-control" id="email" type="email" >#}
+{#              </div>#}
+{#            </div>#}
+{#            <div class="form-group row">#}
+{#              <label class="col-sm-2 col-form-label" for="website">Website:</label>#}
+{#              <div class="col-sm-10">#}
+{#               <input name="fields[website]" class="form-control" id="website" type="text">#}
+{#              </div>#}
+{#            </div>#}
+{#            <div class="form-group row">#}
+{#              <label class="col-sm-2 col-form-label" for="message">Message:</label>#}
+{#              <div class="col-sm-10">#}
+{#                <textarea name="fields[message]" required="required" class="form-control" id="message"></textarea>#}
+{#              </div>#}
+{#            </div>#}
+{#            <button type="submit" class="btn btn-secondary mb-2" id="submit">Submit</button>#}
+{#        </form>#}
+{#      </div>#}
+{#    </div>#}
       {% include 'related_articles.html' %}
     </div>
 
