Added privalytics script

--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -138,6 +138,9 @@
 <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
 <script src="{{ SITEURL }}/theme/js/newsletter_subscribe.js"></script>
 {% block footer_scripts %}{% endblock %}
+
+<script>var privalytics_id="PL-AE7CFB";</script>
+<script async src="https://cdn.privalytics.io/privalytics.js"></script>
 </body>
 
 </html>
