Updated links to point to python for the lab

--- a/template/uetke/templates/static_pages/courses.html
+++ b/template/uetke/templates/static_pages/courses.html
@@ -32,7 +32,7 @@
         <div class="col-md-8 col-lg-6">
           <p class="lead text-justify">The aim of the courses is to show that anybody can build software for the lab. Our intensive 3-day courses cover from the basics of working with Python to distributing packages with built-in documentation.&nbsp; </p>
           <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world examples, with real devices and measurements.</p>
-          <p class="text-justify"><b>Discounts for Groups:</b> If you are group of 5 or more people we can provide the course at your location. Are you part of an academic organization (research institutes, universities, etc.), then we offer discounts for the courses. If you want to learn more, drop us a line: courses@uetke.com</p>
+          <p class="text-justify"><b>Discounts for Groups:</b> If you are group of 5 or more people we can provide the course at your location. Are you part of an academic organization (research institutes, universities, etc.), then we offer discounts for the courses. If you want to learn more, drop us a line: courses@pythonforthelab.com</p>
         </div>
         <div class="col-lg-6 d-none d-md-block col-md-4" style="background-image: url('{{ SITEURL }}/theme/img/apple-desk-laptop-working_2.jpg');background-size:cover;background-repeat:no-repeat;background-position:right center;"></div>
       </div>
@@ -46,7 +46,7 @@
         <div class="col-md-8 col-lg-6">
           <h3>Anywhere in Europe</h3>
           <p class="text-justify">Python for The Lab courses can be organized anywhere in Europe. If you are a group of at least 5 people who want to follow any of the 3-day workshops, contact us. </p>
-          <p class="text-justify">We offer special packages for institutions willing to organize workshops for larger groups or that want to combine more than one of the trainings. Contact us at <b>courses@uetke.com</b> to receive further information.</p>
+          <p class="text-justify">We offer special packages for institutions willing to organize workshops for larger groups or that want to combine more than one of the trainings. Contact us at <b>courses@pythonforthelab.com</b> to receive further information.</p>
         </div>
       </div>
     </div>
@@ -90,12 +90,11 @@
         <div class="col-md-4 col-xs-12">
           <h1 class="">Our Location</h1>
           <p class="lead">Our courses are given at <b style="font-weight: bold;">Meet Berlage</b>, a beautiful venue just 5 minutes away from Amsterdam Central Station.</p>
-          <p class="">Do you prefer a course at your own institute? Drop us a line at courses@uetke.com or through the form below.
+          <p class="">Do you prefer a course at your own institute? Drop us a line at courses@pythonforthelab.com or through the form below.
             <br> </p>
         </div>
       </div>
     </div>
   </div>
 {% include "static_pages/courses_offer.html" %}
-{% include "static_pages/contact_form.html" %}
 {% endblock %}
