--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse text-right justify-content-end" id="navbar2SupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item mx-1">
-                    <a class="btn btn-light" href="{{ SITEURL }}/courses">Courses</a>
+                    <a class="btn btn-light" href="https://www.pythonforthelab.com/courses/">Courses</a>
                 </li>
                 <li class="nav-item mx-1">
                     <a class="btn btn-light" href="{{ SITEURL }}/blog">Blog</a>
@@ -81,18 +81,11 @@
 </nav>
 {% block content %}{% endblock %}
 <!-- Footer -->
-<div class="container my-4">
-    <div class="row">
-        <div class="col-10">
-            {% include 'newsletter_card.html' %}
-        </div>
-    </div>
-</div>
 <div class="py-5 bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-md-12 my-3 text-center">
-                <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a
+                <p class="text-muted">© Copyright 2020 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a
                         href="{{ SITEURL }}/feed.rss">RSS feed</a> | <a href="{{ SITEURL }}/privacy">Privacy Policy</a>
                     | <a
                             href="{{ SITEURL }}/cookie-policy">Cookies</a></p>
