--- a/template/uetke/templates/static_pages/advancedpythonforthelab.html
+++ b/template/uetke/templates/static_pages/advancedpythonforthelab.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Advanced Python for the Lab: The ultimate course for scientists{% endblock %}
-{% block description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for the Lab is completely customized to your needs.{% endblock %}
+{% block description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for the
+  Lab is completely customized to your needs.{% endblock %}
 {% block keywords %}Courses, Advanced, Professional{% endblock %}
 
 {% block og_title %}Advanced Python for the Lab: The ultimate course for scientists{% endblock %}
-{% block og_description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for the Lab is completely customized to your needs.{% endblock %}
+{% block og_description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for
+  the Lab is completely customized to your needs.{% endblock %}
 {% block og_url %}{{ SITEURL }}/courses/advanced/{% endblock %}
 {% block meta_content %}
   <meta property="og:image" content="{{ SITEURL }}/theme/img/python_for_the_lab_header.jpg">
@@ -30,11 +32,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">Once you already know the basics about communicating with your devices and building GUI's you will want to reach new levels</p>
-          <p class="">This course is aimed at groups of people working together. No individual projects, each participant will focus on a different task and everything will come up together at the end.&nbsp;</p>
-          <p class="">Because of the nature of the course, it is available only for groups of up to 5 people who are willing to work as a team.&nbsp;</p>
+          <p class="lead">Once you already know the basics about communicating with your devices and building GUI's you
+            will want to reach new levels</p>
+          <p class="">This course is aimed at groups of people working together. No individual projects, each
+            participant will focus on a different task and everything will come up together at the end.&nbsp;</p>
+          <p class="">Because of the nature of the course, it is available only for groups of up to 5 people who are
+            willing to work as a team.&nbsp;</p>
         </div>
-        <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
+        <dic class="col-md-4 col-lg-6 d-none d-md-block"
+             style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
     </div>
   </div>
@@ -44,21 +50,30 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h1 class="pb-4 text-left">Syllabus</h1>
-          <p class="lead text-left">Advanced Python for the Lab has a flexible syllabus, depending on the interests of the participants. However, we have developed what we believe is a good balance between the different components of a complex computer program.&nbsp;</p>
+          <p class="lead text-left">Advanced Python for the Lab has a flexible syllabus, depending on the interests of
+            the participants. However, we have developed what we believe is a good balance between the different
+            components of a complex computer program.&nbsp;</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="">Sophisticated experiments need a complex array of technologies in order to be successful. During the three days of this course, we are going to cover several of those topics.&nbsp;</p>
-          <p class="">Sophisticated devices such as cameras and high-resolution acquisition cards need to be handled in a different way than message based devices. Learn how to interact with National Instruments DAQ cards, how to acquire images from a camera and
-            communicate through a network. Don't be limited to devices that connect directly to the same computer.&nbsp;</p>
-          <p class="">During the course, you will increase the toolbox of resources you have for making better Python code, learn how to build meaningful documentation and deploy it on <i>Read The Docs</i>. Learn how to debug and optimize your code. Best practices
-            are at hand. Build graphical interfaces that have a better design and a more fluid interaction with the user.</p>
+          <p class="">Sophisticated experiments need a complex array of technologies in order to be successful. During
+            the three days of this course, we are going to cover several of those topics.&nbsp;</p>
+          <p class="">Sophisticated devices such as cameras and high-resolution acquisition cards need to be handled in
+            a different way than message based devices. Learn how to interact with National Instruments DAQ cards, how
+            to acquire images from a camera and
+            communicate through a network. Don't be limited to devices that connect directly to the same
+            computer.&nbsp;</p>
+          <p class="">During the course, you will increase the toolbox of resources you have for making better Python
+            code, learn how to build meaningful documentation and deploy it on <i>Read The Docs</i>. Learn how to debug
+            and optimize your code. Best practices
+            are at hand. Build graphical interfaces that have a better design and a more fluid interaction with the
+            user.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <a class="btn btn-success active btn-block" href="{{ SITEURL }}/courses/register">Sign Up &amp; Conditions </a>
+          Contact us at <b>courses@pythonforthelab.com</b>
         </div>
       </div>
     </div>
@@ -69,14 +84,15 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
           <h3>Next courses</h3>
-          <p class="my-3">Advanced Python for the Lab is currently offered only on request. The nature of the course doesn't make it possible to have heterogeneous groups.&nbsp;
-            <br> </p>
-          <p class="">If you are interested in the course but can't gather a group of 5 people contact us through the form below and we will see what we can work out together.</p>
+          <p class="my-3">Advanced Python for the Lab is currently offered only on request. The nature of the course
+            doesn't make it possible to have heterogeneous groups.&nbsp;
+            <br></p>
+          <p class="">If you are interested in the course but can't gather a group of 5 people contact us through the
+            form below and we will see what we can work out together.</p>
         </div>
         <div class="col-md-3"></div>
       </div>
     </div>
   </div>
-{% include "static_pages/courses_offer.html" %}
-{% include "static_pages/contact_form.html" %}
+  {% include "static_pages/courses_offer.html" %}
 {% endblock %}
