--- a/template/uetke/templates/static_pages/courses_location.html
+++ b/template/uetke/templates/static_pages/courses_location.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 col-xs-12">
           <h1 class="">Our Location</h1>
           <p class="lead">Our courses are given at <b style="font-weight: bold;">Meet Berlage</b>, a great location just 5 minutes away from Amsterdam Centraal Station</p>
-          <p class="">Do you prefer a course at your own location? Drop us a line at courses@uetke.com or through the form below.
+          <p class="">Do you prefer a course at your own location? Drop us a line at courses@pythonforthelab.com or through the form below.
             <br> </p>
         </div>
       </div>
