--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Git for Scientists: Learn the best tool for organizing your work{% endblock %}
-{% block description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of the best version control system and how it can help you in your daily tasks.{% endblock %}
+{% block description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of the
+  best version control system and how it can help you in your daily tasks.{% endblock %}
 {% block keywords %}Courses, Git, Github, Gitlab, Bitbucket{% endblock %}
 
 {% block og_title %}Git for Scientists: Learn the best tool for organizing your work{% endblock %}
-{% block og_description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of the best version control system and how it can help you in your daily tasks. {% endblock %}
+{% block og_description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of
+  the best version control system and how it can help you in your daily tasks. {% endblock %}
 {% block og_url %}{{ SITEURL }}/courses/gitscience/{% endblock %}
 {% block meta_content %}
   <meta property="og:image" content="{{ SITEURL }}/theme/img/python_for_the_lab_header.jpg">
@@ -30,11 +32,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead text-justify">Git version control is the most useful tool from which scientists can benefit, not only for developing sotfware but also to collaborate in teams. Learn by doing from real-world examples!</p>
-          <p class="text-justify">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people that are willing to learn how to achieve a professional workflow and how to collaborate on projects.</p>
-          <p class="text-justify">We will focus on Git best practices, no advanced programming knowledge is required for this course.</p>
+          <p class="lead text-justify">Git version control is the most useful tool from which scientists can benefit,
+            not only for developing sotfware but also to collaborate in teams. Learn by doing from real-world
+            examples!</p>
+          <p class="text-justify">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people that are
+            willing to learn how to achieve a professional workflow and how to collaborate on projects.</p>
+          <p class="text-justify">We will focus on Git best practices, no advanced programming knowledge is required for
+            this course.</p>
         </div>
-        <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
+        <dic class="col-md-4 col-lg-6 d-none d-md-block"
+             style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
     </div>
   </div>
@@ -44,12 +51,16 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h1 class="pb-2 text-left">Syllabus</h1>
-          <p class="lead text-justify">Git for scientists will teach you how to exploit a tool that will help you collaborate, track your changes and document your code.</p>
+          <p class="lead text-justify">Git for scientists will teach you how to exploit a tool that will help you
+            collaborate, track your changes and document your code.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="text-justify">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are in a big or small team, proper use of version control makes your work more efficient and less prone to error.</p>
+          <p class="text-justify">The open source community has quickly shifted to Github to host their projects. The
+            same technology that powers collaborations among big, decentralized teams, can be powering also your
+            research organization. It doesn't matter if you are in a big or small team, proper use of version control
+            makes your work more efficient and less prone to error.</p>
           <p class="">What you are going to learn:</p>
           <ul>
             <li>Start your own Git project</li>
@@ -67,7 +78,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <a class="btn btn-success active btn-block" href="{{ SITEURL }}/courses/register">Sign Up &amp; Conditions</a>
+          Contact us at <b>courses@pythonforthelab.com</b>
         </div>
       </div>
     </div>
@@ -79,17 +90,22 @@
         <div class="col-md-6">
           <h4>Next courses</h4>
           <p class="my-3">April session: Tuesday 17th and Monday 23rd.</p>
-          <p class="">If you are interested in a course, drop us an e-mail to <a href="mailto:courses@uetke.com">courses@uetke.com</a> or <a href="{{ SITEURL }}/courses/register">register</a>. </p>
+          <p class="">If you are interested in a course, drop us an e-mail to <a
+                  href="mailto:courses@pythonforthelab.com">courses@pythonforthelab.com</a> or <a
+                  href="{{ SITEURL }}/courses/register">register</a>. </p>
         </div>
         <div class="col-md-6">
           <h4>What will you get</h4>
-          <p class="text-justify">For <b>350€</b>, Git for Scientists is the most affordable course in Amsterdam. You will learn how to work with version control, in teams, and with the most useful resources. The course is aimed at scientists, but everyone is welcome to join; contact us if you are in doubt.</p>
-          <p class="text-justify">The courses are two full days, from 10 am to 5 pm, and <b>lunch is included</b>. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
+          <p class="text-justify">For <b>350€</b>, Git for Scientists is the most affordable course in Amsterdam. You
+            will learn how to work with version control, in teams, and with the most useful resources. The course is
+            aimed at scientists, but everyone is welcome to join; contact us if you are in doubt.</p>
+          <p class="text-justify">The courses are two full days, from 10 am to 5 pm, and <b>lunch is included</b>.
+            Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for
+            you.</p>
         </div>
       </div>
     </div>
   </div> <!-- Nex Courses -->
-{% include "static_pages/courses_location.html" %}
-{% include "static_pages/courses_offer.html" %}
-{% include "static_pages/contact_form.html" %}
+  {% include "static_pages/courses_location.html" %}
+  {% include "static_pages/courses_offer.html" %}
 {% endblock %}
