--- a/template/uetke/templates/static_pages/pythonforthelab.html
+++ b/template/uetke/templates/static_pages/pythonforthelab.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Python for the Lab: The definitive introduction course for scientists{% endblock %}
-{% block description %}Python for the Lab is the ultimate course for scientists who want to gain control over their experiments{% endblock %}
+{% block description %}Python for the Lab is the ultimate course for scientists who want to gain control over their
+  experiments{% endblock %}
 {% block keywords %}User Interface, GUI, courses{% endblock %}
 
 {% block og_title %}Python for the Lab: The definitive introduction course for scientists{% endblock %}
-{% block og_description %}Python for the Lab is the ultimate course for scientists who want to gain control over their experiments.{% endblock %}
+{% block og_description %}Python for the Lab is the ultimate course for scientists who want to gain control over their
+  experiments.{% endblock %}
 {% block og_url %}{{ SITEURL }}/courses/pythonlab/{% endblock %}
 {% block meta_content %}
   <meta property="og:image" content="{{ SITEURL }}/theme/img/python_for_the_lab_header.jpg">
@@ -30,11 +32,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead text-justify">At Python for the Lab, we aim to show that anybody can build software for the lab. In this intensive 3-day course we will cover various topics, from the basics of communicating with a device to building user interfaces. </p>
-          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from examples, with real devices and measurements. The course Python for the Lab is aimed at small groups of up to 7 people, in order to deliver personalized content to every attendant. &nbsp;</p>
-          <p class="text-justify">Do you want to have a course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
+          <p class="lead text-justify">At Python for the Lab, we aim to show that anybody can build software for the
+            lab. In this intensive 3-day course we will cover various topics, from the basics of communicating with a
+            device to building user interfaces. </p>
+          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major
+            research institutes around the world. Learn from examples, with real devices and measurements. The course
+            Python for the Lab is aimed at small groups of up to 7 people, in order to deliver personalized content to
+            every attendant. &nbsp;</p>
+          <p class="text-justify">Do you want to have a course according to the specific needs of your lab? We can work
+            something out together, drop us a line: courses@pythonforthelab.com</p>
         </div>
-        <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
+        <dic class="col-md-4 col-lg-6 d-none d-md-block"
+             style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
     </div>
   </div>
@@ -50,7 +59,10 @@
         <div class="col-md-12">
           <ul class="">
             <li>Day 0 (To be done at home): &nbsp;
-              <br>You will receive detailed instructions on how to install a development environment on your own computer. You will set up a virtual environment and install the needed libraries for the project. You will also receive instructions to set up a GitHub account that you will use during the course.</li>
+              <br>You will receive detailed instructions on how to install a development environment on your own
+              computer. You will set up a virtual environment and install the needed libraries for the project. You will
+              also receive instructions to set up a GitHub account that you will use during the course.
+            </li>
             <li>Day 1:
               <ul>
                 <li>Introduction to the tools we are going to use and to class dynamics</li>
@@ -85,7 +97,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <a class="btn btn-success active btn-block" href="{{ SITEURL }}/courses/register">Sign Up &amp; Conditions </a>
+          Contact us at <b>courses@pythonforthelab.com</b>
         </div>
       </div>
     </div>
@@ -99,8 +111,11 @@
         <div class="col-sm-12 col-md-5">
           <p class="lead">What do you need to know before the course:</p>
           <ul class="" id="need">
-            <li class="list-group-item"><span class="fa needspan fa-check-square"></span>Basics of programming (for loop, while loop, etc.)</li>
-            <li class="list-group-item"><span class="fa needspan fa-check-square"></span>Working with the command line</li>
+            <li class="list-group-item"><span class="fa needspan fa-check-square"></span>Basics of programming (for
+              loop, while loop, etc.)
+            </li>
+            <li class="list-group-item"><span class="fa needspan fa-check-square"></span>Working with the command line
+            </li>
             <li class="list-group-item"><span class="fa needspan fa-check-square"></span>How measurements work</li>
             <li class="list-group-item"><span class="fa needspan fa-check-square"></span>Ohm's law</li>
           </ul>
@@ -113,7 +128,8 @@
             <li class="list-group-item"><span class="fa notneedspan fa-times"></span>Electronics</li>
             <li class="list-group-item"><span class="fa notneedspan fa-times"></span>UI Design</li>
           </ul>
-          <p class="">You don't need to have high programming skills, but you should be familiar with ideas such as loops and functions</p>
+          <p class="">You don't need to have high programming skills, but you should be familiar with ideas such as
+            loops and functions</p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -126,19 +142,26 @@
         <div class="col-md-6">
           <h4>Next courses</h4>
           <p class="my-3">There are no courses planned at the moment.</p>
-          <p class="">If you are interested in a course, drop us an e-mail to <a href="mailto:courses@uetke.com">courses@uetke.com</a> or fill the form below. </p>
+          <p class="">If you are interested in a course, drop us an e-mail to <a
+                  href="mailto:courses@pythonforthelab.com">courses@pythonforthelab.com</a> or fill the form below. </p>
         </div>
         <div class="col-md-6">
           <h4>What will you get</h4>
-          <p class="text-justify">For only 550€ Python for the Lab is the only course designed to meet your needs. You will learn about different topics, including the development of drivers and user interfaces. The course is aimed at experimental scientists; general experimental knowledge and programming skills are required.</p>
-          <p class="text-justify">Every participant will receive a free copy of the book Python For The Lab. During the length of the course, participants will also get a real acquisition device for practicing at home. For a small price, you can keep it after the course.</p>
-          <p class="text-justify">The course last three full days, from 10 am to 5 pm, and lunch is included. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
-          <p class="text-justify">Before the course, you will receive instruction on how to install all the software that you will need. Everything we use is open source, therefore it will not incur extra costs.</p>
+          <p class="text-justify">For only 550€ Python for the Lab is the only course designed to meet your needs. You
+            will learn about different topics, including the development of drivers and user interfaces. The course is
+            aimed at experimental scientists; general experimental knowledge and programming skills are required.</p>
+          <p class="text-justify">Every participant will receive a free copy of the book Python For The Lab. During the
+            length of the course, participants will also get a real acquisition device for practicing at home. For a
+            small price, you can keep it after the course.</p>
+          <p class="text-justify">The course last three full days, from 10 am to 5 pm, and lunch is included. Please
+            bring your own laptop; if you don't own one, let us know in advance and we can arrange something for
+            you.</p>
+          <p class="text-justify">Before the course, you will receive instruction on how to install all the software
+            that you will need. Everything we use is open source, therefore it will not incur extra costs.</p>
         </div>
       </div>
     </div>
   </div>
-{% include "static_pages/courses_location.html" %}
-{% include "static_pages/courses_offer.html" %}
-{% include "static_pages/contact_form.html" %}
+  {% include "static_pages/courses_location.html" %}
+  {% include "static_pages/courses_offer.html" %}
 {% endblock %}
