--- a/template/uetke/templates/static_pages/register.html
+++ b/template/uetke/templates/static_pages/register.html
@@ -29,7 +29,7 @@
           <p class="">Each course includes materials such as the electronic copy of the slides used and hard copies of the notes.&nbsp;</p>
         </div>
         <div class="col-md-6"><a name="form">&nbsp;</a>
-          <form class="" action="https://formspree.io/courses@uetke.com" method="POST">
+          <form class="" action="https://formspree.io/courses@pythonforthelab.com" method="POST">
             <div class="form-group"> <label for="InputName">Your name:</label>
               <input type="text" class="form-control" placeholder="Enter Your Name" name="name" id="InputName"> </div>
             <div class="form-group"> <label for="InputEmail1">Email address</label>
